[gd_scene load_steps=9 format=3 uid="uid://de2rr2sia3v8d"]

[ext_resource type="PackedScene" uid="uid://cqmvcq8hwe083" path="res://assets/scenes/stages/level_template.tscn" id="1_3jmyt"]
[ext_resource type="Shader" path="res://assets/scenes/stages/level_template.gdshader" id="2_bk62d"]
[ext_resource type="Script" path="res://assets/scenes/stages/stage_3_10.gd" id="2_cnvaa"]
[ext_resource type="AudioStream" uid="uid://c5m44lq4oqs83" path="res://assets/sounds/sfx3_10jumpscare.ogg" id="3_pg5l4"]
[ext_resource type="Texture2D" uid="uid://epyaef63yl7j" path="res://assets/graphics/ashbabyjumpscare.png" id="4_rt2xf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l0uof"]
resource_local_to_scene = true
shader = ExtResource("2_bk62d")
shader_parameter/C1 = Color(0.788235, 1, 0.87451, 1)
shader_parameter/C2 = Color(0.6004, 0.76, 0.66424, 1)
shader_parameter/C3 = Color(0.3922, 0.53, 0.44732, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bp8hx"]
resource_local_to_scene = true
shader = ExtResource("2_bk62d")
shader_parameter/C1 = Color(0.0666667, 1, 0, 1)
shader_parameter/C2 = Color(0, 0.278431, 0, 1)
shader_parameter/C3 = Color(0, 0, 0, 1)
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tgef"]
resource_local_to_scene = true
shader = ExtResource("2_bk62d")
shader_parameter/C1 = Color(1, 0.501961, 0.67451, 1)
shader_parameter/C2 = Color(0.4, 0, 0.12549, 1)
shader_parameter/C3 = Color(0, 0, 0, 1)
shader_parameter/alpha = 1.0

[node name="Stage3-10" instance=ExtResource("1_3jmyt")]
script = ExtResource("2_cnvaa")
level_name = "3-10: Now You See Me, Now You Don't"
scene_ID = "stage3-10"
music_choice = "bgmLvl3"
stage_color = Color(0.909804, 0.811765, 0.729412, 1)
progress_destination = "stage3-11"

[node name="sfxJumpscare" type="AudioStreamPlayer" parent="." index="0"]
stream = ExtResource("3_pg5l4")

[node name="jumpscaresprite" type="Sprite2D" parent="." index="1"]
visible = false
z_index = 3
position = Vector2(512, 256)
scale = Vector2(0.731429, 0.761905)
texture = ExtResource("4_rt2xf")

[node name="Tiles1" parent="." index="2"]
material = SubResource("ShaderMaterial_l0uof")
layer_0/tile_data = PackedInt32Array(2097168, 0, 0, 2097169, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097182, 0, 0, 2097183, 0, 0, 2097184, 0, 0, 2097185, 0, 0, 2097186, 0, 0, 2097187, 0, 0, 2097188, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2097197, 0, 0, 2097198, 0, 0, 2097199, 0, 0, 2031631, 0, 0, 1966095, 0, 0, 1900559, 0, 0, 1835023, 0, 0, 1769487, 0, 0, 1703951, 0, 0, 1638415, 0, 0, 1572879, 0, 0, 1507343, 0, 0, 1441807, 0, 0, 1376271, 0, 0, 1310735, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 786447, 0, 0, 851983, 0, 0, 917519, 0, 0, 983055, 0, 0, 1048591, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, -65490, 0, 0, -65489, 0, 0, 48, 0, 0, 65584, 0, 0, 131120, 0, 0, 196656, 0, 0, 262192, 0, 0, 327728, 0, 0, 393264, 0, 0, 458800, 0, 0, 524336, 0, 0, 589872, 0, 0, 655408, 0, 0, 720944, 0, 0, 786480, 0, 0, 852016, 0, 0, 917552, 0, 0, 983088, 0, 0, 1048624, 0, 0, 1114160, 0, 0, 1179696, 0, 0, 1245232, 0, 0, 1310768, 0, 0, 1376304, 0, 0, 1441840, 0, 0, 1507376, 0, 0, 1572912, 0, 0, 1638448, 0, 0, 1703984, 0, 0, 1769520, 0, 0, 1835056, 0, 0, 1900592, 0, 0, 1966128, 0, 0, 2031664, 0, 0, -65521, 0, 0, 2097167, 0, 0, 2097200, 0, 0, -65488, 0, 0, 786467, 0, 0, 852003, 0, 0, 917539, 0, 0, 983075, 0, 0, 983076, 0, 0, 917540, 0, 0, 852004, 0, 0, 786468, 0, 0, 720932, 0, 0, 720931, 0, 0, 589859, 0, 0, 655395, 0, 0, 655396, 0, 0, 589860, 0, 0, 589861, 0, 0, 655397, 0, 0, 655398, 0, 0, 589862, 0, 0, 589863, 0, 0, 655400, 0, 0, 655399, 0, 0, 589864, 0, 0, 589865, 0, 0, 655401, 0, 0, 655402, 0, 0, 589866, 0, 0, 589867, 0, 0, 655403, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1114147, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1114148, 0, 0, 1245219, 0, 0, 1310756, 0, 0, 1245220, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1441839, 0, 0, 1441838, 0, 0, 1441837, 0, 0, 1441836, 0, 0, 1441835, 0, 0, 1441834, 0, 0, 1441833, 0, 0, 1441832, 0, 0, 1441831, 0, 0, 1441830, 0, 0, 1179685, 262144, 0, 1245222, 262144, 0, 1310759, 262144, 0, 1245221, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310765, 196608, 0, 1245230, 196608, 0, 1179695, 196608, 0, 1310767, 0, 0, 1310766, 0, 0, 1245231, 0, 0, 524323, 0, 0, 458787, 262144, 0, 524324, 262144, 0, 458786, 0, 0, 458785, 0, 0, 458784, 0, 0, 458783, 0, 0, 458782, 0, 0, 458781, 0, 0, 458780, 0, 0, 458779, 0, 0, 458778, 0, 0, 458777, 0, 0, 458776, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524322, 0, 0, 524321, 0, 0, 524320, 0, 0, 524319, 0, 0, 524318, 0, 0, 524317, 0, 0, 786448, 262144, 0, 851985, 262144, 0, 917522, 262144, 0, 983059, 262144, 0, 851984, 0, 0, 917520, 0, 0, 983056, 0, 0, 983057, 0, 0, 917521, 0, 0, 983058, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1114139, 0, 0, 1114138, 0, 0, 1114137, 0, 0, 1114136, 0, 0, 1114135, 0, 0, 1114134, 0, 0, 1114133, 0, 0, 1114132, 0, 0, 1114131, 0, 0, 1114130, 0, 0, 1114129, 0, 0, 1114128, 0, 0, 589855, 131072, 0, 655392, 131072, 0, 720929, 131072, 0, 786466, 131072, 0, 589856, 0, 0, 589857, 0, 0, 655393, 0, 0, 655394, 0, 0, 589858, 0, 0, 720930, 0, 0, 1048604, 262144, 0, 1114140, 65536, 0, 1441822, 0, 0, 1376287, 0, 0, 1441823, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572892, 0, 0, 1835034, 0, 0, 1835035, 0, 0, 1835036, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1769504, 0, 0, 1703968, 0, 0, 1638432, 0, 0, 1572891, 0, 0, 1572890, 0, 0, 1572889, 0, 0, 1572888, 0, 0, 1572887, 0, 0, 1572886, 0, 0, 1572885, 0, 0, 1572884, 0, 0, 1572883, 0, 0, 1572882, 0, 0, 1572881, 0, 0, 1572880, 0, 0, 1835033, 0, 0, 1835032, 0, 0, 1835031, 0, 0, 1835030, 0, 0, 1572896, 262144, 0, 1310755, 131072, 0, 1376292, 131072, 0, 1441829, 131072, 0, 1638433, 262144, 0, 1703970, 262144, 0, 1769507, 262144, 0, 1703969, 0, 0, 1769505, 0, 0, 1835041, 0, 0, 1835042, 0, 0, 1769506, 0, 0, 1835043, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1966125, 0, 0, 1966126, 0, 0, 1507357, 0, 0, 1507356, 196608, 0, 1441821, 196608, 0, 1376286, 196608, 0, 1441808, 262144, 0, 1507345, 262144, 0, 1245200, 65536, 0, 1179665, 65536, 0, 1179664, 0, 0, 1507344, 0, 0, 1638416, 65536, 0, 2031632, 262144, 0, 45, 131072, 0, 65582, 131072, 0, 131119, 131072, 0, 46, 0, 0, 47, 0, 0, 65583, 0, 0, 393249, 0, 0, 327713, 0, 0, 327714, 0, 0, 393250, 0, 0, 16, 0, 0, 65552, 0, 0, 65553, 0, 0, 17, 0, 0, 131089, 0, 0, 196625, 0, 0, 131088, 0, 0, 196624, 0, 0, 327704, 0, 0, 393240, 0, 0, 393241, 0, 0, 327705, 0, 0)

[node name="SwitchTiles1" parent="." index="4"]
material = SubResource("ShaderMaterial_bp8hx")

[node name="SwitchTiles2" parent="." index="5"]
material = SubResource("ShaderMaterial_3tgef")

[node name="GoalHole" parent="MainObjects" index="0"]
position = Vector2(480, 424)

[node name="CatGolf" parent="MainObjects" index="1"]
position = Vector2(624, 224)
